--- a/osmfr.yml
+++ b/osmfr.yml
@@ -379,7 +379,24 @@ Layer:
     <<: *extents
     Datasource:
       <<: *osm2pgsql
-      table: " /* minor-roads-fill */ (select way,oneway,junction,toll, coalesce(highway,aeroway) as highway, horse,bicycle,foot,construction,coalesce(tags->'footway','') as footway, tags->'level' as level, case when bridge in ('yes','true','1','viaduct') then 'yes'::text else 'no'::text end as bridge, case when railway in ('spur','siding') or (railway='rail' and service in ('spur','siding','yard')) then 'spur-siding-yard'::text else railway end as railway, case when service in ('parking_aisle','drive-through','driveway') then 'INT-minor'::text else 'INT-normal'::text end as service, tracktype, access, case  when (z_order<10 and z_order>3 and highway in ('motorway_link','trunk_link','primary_link','secondary_link','tertiary_link')) then 4+(z_order/10)  when (z_order<10 and z_order>3 and highway='tertiary') then 5 else z_order end as zz_order   from planet_osm_line where coalesce(tunnel,covered,'') not in ('yes','true','1') AND (highway is not null or aeroway in ('runway','taxiway','taxipath','parking_position') or railway in ('light_rail','narrow_gauge','funicular','rail','subway','tram','spur','siding','platform','disused','abandoned','construction','miniature','turntable')) and route is null  ORDER BY zz_order) as roads"
+      table: >-
+        /* minor-roads-fill */ (SELECT  way, oneway, junction, toll, horse, bicycle, foot, tracktype, access, construction,
+                                        tags->'level' as level,
+                                        coalesce(highway, aeroway) as highway,
+                                        coalesce(tags->'footway', '') as footway,
+                                        case when bridge in ('yes','true','1','viaduct') then 'yes'::text else 'no'::text end as bridge,
+                                        case when railway in ('spur','siding') or (railway='rail' and service in ('spur','siding','yard')) then 'spur-siding-yard'::text else railway end as railway,
+                                        case when service in ('parking_aisle','drive-through','driveway') then 'INT-minor'::text else 'INT-normal'::text end as service,
+                                        case  when (z_order<10 and z_order>3 and highway in ('motorway_link','trunk_link','primary_link','secondary_link','tertiary_link')) then 4+(z_order/10)
+                                              when (z_order<10 and z_order>3 and highway='tertiary') then 5
+                                              else z_order end as zz_order
+                                FROM planet_osm_line
+                                WHERE coalesce(tunnel,covered,'') not in ('yes','true','1')
+                                      AND  (highway is not null
+                                            OR aeroway in ('runway','taxiway','taxipath','parking_position')
+                                            OR railway in ('light_rail','narrow_gauge','funicular','rail','subway','tram','spur','siding','platform','disused','abandoned','construction','miniature','turntable'))
+                                      AND route is null
+                                ORDER BY zz_order) as roads
       simplify_geometries: 'true'
 
 
@@ -387,7 +404,7 @@ Layer:
     <<: *extents
     Datasource:
       <<: *osm2pgsql
-      table: " /* turning-circle-fill/casing */ (select p.way, substring(max(prio),3) as int_tc_type, max(prio) from planet_osm_point p join planet_osm_line l on st_dwithin(l.way, p.way,0.1) join (values ('tertiary','1_tertiary'), ('unclassified','2_unclassified'), ('residential','3_residential'), ('living_street','4_living_street'), ('service','5_service') ) as v (highway,prio) on v.highway=l.highway where l.highway is not null and p.highway in ('turning_circle','turning_loop') and p.way && !bbox! group by p.way order by 3) as turning_circle"
+      table: " /* turning-circle-fill/casing */ (select p.way, substring(max(prio),3) as int_tc_type, max(prio) from planet_osm_point p join planet_osm_line l on st_dwithin(l.way, p.way,0.1) join (values ('tertiary','1_tertiary'), ('unclassified','2_unclassified'), ('residential','3_residential'), ('living_street','4_living_street'), ('service','5_service') ) as v (highway,prio) on v.highway=l.highway where l.highway is not null and p.highway in ('turning_circle','turning_loop') and p.way && !bbox! group by p.way order by 3) as turning_circle_fill"
 
 
   - id: ferry-routes
@@ -456,23 +473,23 @@ Layer:
     Datasource:
       <<: *osm2pgsql
       table: >-
-        /* layer0 */ (SELECT case when oneway in ('yes','true','1') then
-        ST_Reverse(way) else way end as way, case when oneway is not null then
-        '-1'  else '' end as oneway, access, CASE WHEN bridge in
-        ('yes','true','1','viaduct') then 'yes' else 'no' END as bridge, CASE
-        WHEN tunnel in ('yes','true','1') then 'yes' else 'no' END as tunnel,
-        junction,toll,coalesce(highway,aeroway) as highway, horse, bicycle,
-        foot, tracktype, coalesce(tags->'footway','') as footway, case when
-        railway in ('spur','siding') or (railway='rail' and service in
-        ('spur','siding','yard')) then 'INT-spur-siding-yard'::text else railway
-        end as railway,  case when service in
-        ('parking_aisle','drive-through','driveway') then 'INT-minor'::text else
-        'INT-normal'::text end as service  FROM planet_osm_line  WHERE way &&
-        !bbox!  AND bridge in ('yes','true','1','viaduct')  AND (layer is null
-        or layer ='0')  AND (highway is not null or aeroway in
-        ('runway','taxiway','taxipath','parking_position') or railway in
+        /* layer0 */ (SELECT  case when oneway in ('yes','true','1') then ST_Reverse(way) else way end as way,
+                              case when oneway is not null then '-1'  else '' end as oneway,
+                              access,
+                              CASE WHEN bridge in ('yes','true','1','viaduct') then 'yes' else 'no' END as bridge,
+                              CASE WHEN tunnel in ('yes','true','1') then 'yes' else 'no' END as tunnel,
+                              junction, toll, coalesce(highway,aeroway) as highway, horse, bicycle, foot, tracktype,
+                              coalesce(tags->'footway','') as footway,
+                              case when railway in ('spur','siding') or (railway='rail' and service in ('spur','siding','yard')) then 'INT-spur-siding-yard'::text else railway end as railway,
+                              case when service in ('parking_aisle','drive-through','driveway') then 'INT-minor'::text else 'INT-normal'::text end as service
+                      FROM planet_osm_line
+                      WHERE way && !bbox!
+                        AND bridge in ('yes','true','1','viaduct')
+                        AND (layer is null or layer ='0')
+                        AND (highway is not null or aeroway in ('runway','taxiway','taxipath','parking_position') or railway in
         ('light_rail','subway','narrow_gauge','rail','spur','siding','disused','abandoned','construction')
-        or waterway is not null)  ORDER BY z_order) as layer0
+        or waterway is not null)
+                      ORDER BY z_order) as layer0
 
 
   - id: bridges-l1
