--- a/renderd-example.conf
+++ b/renderd-example.conf
@@ -1,3 +1,14 @@
+[renderd]
+stats_file=/var/run/renderd/renderd.stats
+socketname=/var/run/renderd/renderd.sock
+num_threads=8
+tile_dir=/var/lib/mod_tile ; DOES NOT WORK YET
+
+[mapnik]
+plugins_dir=/usr/lib/mapnik/3.0/input
+font_dir=/usr/share/fonts/truetype/
+font_dir_recurse=true
+
 [osmfr]
 URI=/osmfr/
 XML=/data/renderd/fr/osmfr-cartocss.xml
