--- a/renderd-example.conf
+++ b/renderd-example.conf
@@ -15,9 +15,9 @@ XML=/data/renderd/fr/osmfr-cartocss.xml
 MAXZOOM=20
 TYPE=png image/png
 
-[osmfr2]
+[osmfr@2x]
 # retina version
-URI=/osmfr2/
+URI=/osmfr@2x/
 XML=/data/renderd/fr/osmfr-cartocss.xml
 MAXZOOM=20
 TYPE=png image/png
