--- a/osmfr.yml
+++ b/osmfr.yml
@@ -357,7 +357,13 @@ Layer:
     <<: *extents
     Datasource:
       <<: *osm2pgsql
-      table: " /* buildings */ (select ST_Simplify(way,!pixel_width!/4) as way, aeroway, amenity, tags->'heritage' as heritage, case when building in ('residential','house','garage','garages','detached','terrace','apartments') then 'INT-light'::text else building end as building, tags->'wall' as wall  from planet_osm_polygon  where ((building is not null  and building not in ('no','train_station','station','supermarket','planned','civic','public')   and (railway is null or railway != 'station')   and (amenity is null or amenity not in ('place_of_worship', 'public_building','townhall','courthouse','police','post_office','theatre','community_centre','social_facility')))  or aeroway = 'terminal') and way_area < 2000000 and way_area > !pixel_width!*!pixel_height! and way && !bbox! order by z_order,way_area desc) as buildings"
+      table: " /* buildings */ (SELECT ST_Simplify(way,!pixel_width!/4) as way, tags->'heritage' as heritage,
+      coalesce(aeroway, case when building in ('residential','house','garage','garages','detached','terrace','apartments') then 'INT-light'::text else building end) as building,
+      tags->'wall' as wall
+      FROM planet_osm_polygon
+      WHERE ((building is not null and building not in ('no','train_station','station','supermarket','planned','civic','public') and (railway is null or railway != 'station') and (amenity is null or amenity not in ('place_of_worship', 'public_building','townhall','courthouse','police','post_office','theatre','community_centre','social_facility')))  or aeroway = 'terminal')
+      AND way_area < 2000000 AND way_area > !pixel_width!*!pixel_height!
+      AND way && !bbox! order by z_order,way_area desc) as buildings"
 
 
   - id: indoor
