--- a/osmfr.yml
+++ b/osmfr.yml
@@ -622,7 +622,26 @@ Layer:
     <<: *extents
     Datasource:
       <<: *osm2pgsql
-      table: " /* highway_crossings */ (select osm_id, tactile_paving, crossing_bollard, wheelchair, ST_GeometryN(st_union(way),1) as way, max(angle)-min(angle) as angle_diff, avg(angle) as angle from (select p.osm_id, tactile_paving, crossing_bollard, wheelchair, p.way as way, cast(90+degrees(ST_Azimuth(st_lineinterpolatepoint(way1,0),st_lineinterpolatepoint(way1,1))) as integer) % 180 as angle from (select * from (select p.osm_id, p.way, ST_LineMerge(ST_Intersection(st_buffer(p.way,0.1), h.way)) as way1, p.tags->'tactile_paving' as tactile_paving, p.tags->'crossing:bollard' as crossing_bollard, coalesce(p.tags->'wheelchair',p.tags->'sloped_curb') as wheelchair from planet_osm_point as p join planet_osm_line h on (st_intersects(p.way,h.way) and h.highway is not null and h.highway not in ('footway','cycleway','path','pedestrian','steps','service')) where (p.highway='crossing' or p.tags->'crossing' in ('traffic_signals','uncontrolled')) and p.way && !bbox!) as p where ST_GeometryType(way1)='ST_LineString') as p) as crossing group by osm_id, tactile_paving, crossing_bollard, wheelchair) as highway_crossings"
+      table: >-
+        /* highway_crossings */ (SELECT osm_id, tactile_paving, crossing_bollard, wheelchair,
+          ST_GeometryN(st_union(way),1) as way, max(angle)-min(angle) as angle_diff,
+          avg(angle) as angle
+          FROM (
+            SELECT p.osm_id, tactile_paving, crossing_bollard, wheelchair, p.way as way,
+              cast(90+degrees(ST_Azimuth(st_lineinterpolatepoint(way1,0),st_lineinterpolatepoint(way1,1))) as integer) % 180 as angle
+            FROM (
+              SELECT * FROM (
+                SELECT p.osm_id, p.way, ST_LineMerge(ST_Intersection(st_buffer(p.way,0.1), h.way)) as way1,
+                  p.tags->'tactile_paving' as tactile_paving, p.tags->'crossing:bollard' as crossing_bollard,
+                  coalesce(p.tags->'wheelchair',p.tags->'sloped_curb') as wheelchair
+                FROM planet_osm_point as p
+                JOIN planet_osm_line h
+                  ON (st_intersects(p.way,h.way) and h.highway is not null and h.highway not in ('footway','cycleway','path','pedestrian','steps','service'))
+                WHERE (p.highway='crossing' or p.tags ? 'crossing') and p.way && !bbox! and h.way && !bbox!
+              ) as p
+              WHERE ST_GeometryType(way1)='ST_LineString') as p) as crossing
+              GROUP BY osm_id, tactile_paving, crossing_bollard, wheelchair
+            ) as highway_crossings
 
 
   - id: trams
