--- a/osmfr.yml
+++ b/osmfr.yml
@@ -848,25 +848,26 @@ Layer:
 
     class: symbols
 
-  - id: amenity-points-poly
-    <<: *extents
-    Datasource:
-      <<: *osm2pgsql
-      table: " /* amenity-points-poly */ (SELECT way,amenity,shop,tourism,highway,man_made,access,religion,waterway,lock,historic,leisure,power,operator, coalesce(tags->'indoor',case when to_int(tags->'level')<0 then 'yes'::text when tags->'location'='underground' then 'yes'::text else null end) as indoor, to_int(tags->'level') as level, tags->'network' as network, tags->'ref:FR:LaPoste' as ref_laposte, coalesce(tags->'emergency', tags->'medical') as emergency, coalesce(tags->'conveying', tags->'conveyor_dir') as conveying, tags->'incline' as incline, tags->'fuel:lpg' as lpg, tags->'heritage' as heritage, coalesce(tags->'post_office:type', tags->'recycling_type', tags->'shelter_type',tags->'information','') as poi_type, substring('******',1,to_int(tags->'stars')::integer) as stars, tags->'parking' as parking, way_area, name, ref, tags->'organic' as organic, office, p.tags->'craft' as craft, fr_abbrev(coalesce(p.tags->'short_name:fr',p.tags->'short_name',p.tags->'alt_name',p.tags->'name:fr',p.name)) as nom, case when amenity='townhall' then 2  when amenity in ('post_office','courthouse','police','public_building','hospital','clinic') then 1  else 0 end as prio FROM planet_osm_polygon p  WHERE (amenity is not null or shop is not null or tourism in ('alpine_hut','camp_site','caravan_site','guest_house','hostel','hotel','motel','museum','viewpoint','bed_and_breakfast','information','chalet','zoo') or highway in ('bus_stop','traffic_signals') or man_made in ('mast','water_tower')  or historic in ('memorial','archaeological_site','castle')  or leisure in ('playground','slipway','golf_course','picnic_table') or power in ('generator','sub_station','substation','plant')  or tags ? 'emergency' or tags ? 'medical' or office is not null or tags ? 'craft') and way_area > !pixel_width!*!pixel_height!*10  order by prio desc, way_area desc ) as points"
-
-    class: points
 
   - id: amenity-points
     <<: *extents
     zoom_min: 13
     Datasource:
       <<: *osm2pgsql
-      table: " /* amenity-points */ (SELECT way,amenity,shop,tourism,highway,man_made,access,religion,waterway,lock,historic,leisure,power,operator, coalesce(tags->'indoor',case when to_int(tags->'level')<0 then 'yes'::text when tags->'location'='underground' then 'yes'::text else null end) as indoor, to_int(tags->'level') as level, tags->'network' as network, tags->'ref:FR:LaPoste' as ref_laposte, coalesce(tags->'emergency', tags->'medical')  as emergency, tags->'conveying' as conveying, tags->'incline' as incline, tags->'fuel:lpg' as lpg , tags->'heritage' as heritage, coalesce(tags->'post_office:type', tags->'recycling_type', tags->'shelter_type',tags->'information','') as poi_type, substring('******',1,to_int(tags->'stars')::integer) as stars, tags->'parking' as parking, 0 as way_area, name, ref, tags->'organic' as organic, office, p.tags->'craft' as craft, fr_abbrev(coalesce(p.tags->'short_name:fr',p.tags->'short_name',p.tags->'alt_name',p.tags->'name:fr',p.name)) as nom,  case when amenity='townhall' then 2  when amenity in ('post_office','courthouse','police','public_building','hospital','clinic') then 1  else 0 end as prio FROM planet_osm_point p WHERE (amenity is not null and amenity != 'bus_station') or shop is not null or tourism in ('alpine_hut','camp_site','caravan_site','guest_house','hostel','hotel','motel','museum','viewpoint','bed_and_breakfast','information','chalet','zoo') or highway in ('traffic_signals','ford') or man_made in ('mast','water_tower') or historic in ('memorial','archaeological_site','castle') or waterway='lock' or lock='yes' or leisure in ('playground','slipway','golf_course','picnic_table') or power in ('generator','sub_station','substation','plant') or tags ? 'emergency' or tags ? 'medical' or office is not null or tags ? 'craft' order by prio desc, tags->'stars' desc ) as points"
-
-      project: osmfr
-      srs: >-
-        +proj=merc +a=6378137 +b=6378137 +lat_ts=0.0 +lon_0=0.0 +x_0=0.0
-        +y_0=0.0 +k=1.0 +units=m +nadgrids=@null +wktext +no_defs +over
+      table: " /* amenity-points */ (
+        SELECT
+          way,amenity,shop,tourism,highway,man_made,access,religion,waterway,lock,
+          historic,leisure,power,operator,
+          coalesce(tags->'indoor',case when to_int(tags->'level')<0 then 'yes'::text when tags->'location'='underground' then 'yes'::text else null end) as indoor,
+          to_int(tags->'level') as level, tags->'network' as network,
+          tags->'ref:FR:LaPoste' as ref_laposte, coalesce(tags->'emergency', tags->'medical') as emergency,
+          coalesce(tags->'conveying', tags->'conveyor_dir') as conveying, tags->'incline' as incline, tags->'fuel:lpg' as lpg, tags->'heritage' as heritage, coalesce(tags->'post_office:type', tags->'recycling_type', tags->'shelter_type',tags->'information','') as poi_type, substring('******',1,to_int(tags->'stars')::integer) as stars, tags->'parking' as parking, way_area, name, ref, tags->'organic' as organic, office, p.tags->'craft' as craft, fr_abbrev(coalesce(p.tags->'short_name:fr',p.tags->'short_name',p.tags->'alt_name',p.tags->'name:fr',p.name)) as nom, case when amenity='townhall' then 2  when amenity in ('post_office','courthouse','police','public_building','hospital','clinic') then 1  else 0 end as prio
+        FROM planet_osm_polygon p
+        WHERE (amenity is not null or shop is not null or tourism in ('alpine_hut','camp_site','caravan_site','guest_house','hostel','hotel','motel','museum','viewpoint','bed_and_breakfast','information','chalet','zoo') or highway in ('bus_stop','traffic_signals') or man_made in ('mast','water_tower')  or historic in ('memorial','archaeological_site','castle')  or leisure in ('playground','slipway','golf_course','picnic_table') or power in ('generator','sub_station','substation','plant')  or tags ? 'emergency' or tags ? 'medical' or office is not null or tags ? 'craft')
+          AND way_area > !pixel_width!*!pixel_height!*10
+        UNION SELECT
+          way,amenity,shop,tourism,highway,man_made,access,religion,waterway,lock,historic,leisure,power,operator, coalesce(tags->'indoor',case when to_int(tags->'level')<0 then 'yes'::text when tags->'location'='underground' then 'yes'::text else null end) as indoor, to_int(tags->'level') as level, tags->'network' as network, tags->'ref:FR:LaPoste' as ref_laposte, coalesce(tags->'emergency', tags->'medical')  as emergency, tags->'conveying' as conveying, tags->'incline' as incline, tags->'fuel:lpg' as lpg , tags->'heritage' as heritage, coalesce(tags->'post_office:type', tags->'recycling_type', tags->'shelter_type',tags->'information','') as poi_type, substring('******',1,to_int(tags->'stars')::integer) as stars, tags->'parking' as parking, 0 as way_area, name, ref, tags->'organic' as organic, office, p.tags->'craft' as craft, fr_abbrev(coalesce(p.tags->'short_name:fr',p.tags->'short_name',p.tags->'alt_name',p.tags->'name:fr',p.name)) as nom,  case when amenity='townhall' then 2  when amenity in ('post_office','courthouse','police','public_building','hospital','clinic') then 1  else 0 end as prio FROM planet_osm_point p WHERE (amenity is not null and amenity != 'bus_station') or shop is not null or tourism in ('alpine_hut','camp_site','caravan_site','guest_house','hostel','hotel','motel','museum','viewpoint','bed_and_breakfast','information','chalet','zoo') or highway in ('traffic_signals','ford') or man_made in ('mast','water_tower') or historic in ('memorial','archaeological_site','castle') or waterway='lock' or lock='yes' or leisure in ('playground','slipway','golf_course','picnic_table') or power in ('generator','sub_station','substation','plant') or tags ? 'emergency' or tags ? 'medical' or office is not null or tags ? 'craft'
+        ORDER BY prio desc, way_area desc ) as points"
 
     class: points
 
