--- a/osmfr.yml
+++ b/osmfr.yml
@@ -852,9 +852,11 @@ Layer:
   - id: amenity-points
     <<: *extents
     zoom_min: 13
+    zoom_max: 13
     Datasource:
       <<: *osm2pgsql
-      table: " /* amenity-points */ (
+      table: >-
+        /* amenity-points */ (
         SELECT
           way,amenity,shop,tourism,highway,man_made,access,religion,waterway,lock,
           historic,leisure,power,operator,
@@ -863,11 +865,31 @@ Layer:
           tags->'ref:FR:LaPoste' as ref_laposte, coalesce(tags->'emergency', tags->'medical') as emergency,
           coalesce(tags->'conveying', tags->'conveyor_dir') as conveying, tags->'incline' as incline, tags->'fuel:lpg' as lpg, tags->'heritage' as heritage, coalesce(tags->'post_office:type', tags->'recycling_type', tags->'shelter_type',tags->'information','') as poi_type, substring('******',1,to_int(tags->'stars')::integer) as stars, tags->'parking' as parking, way_area, name, ref, tags->'organic' as organic, office, p.tags->'craft' as craft, fr_abbrev(coalesce(p.tags->'short_name:fr',p.tags->'short_name',p.tags->'alt_name',p.tags->'name:fr',p.name)) as nom, case when amenity='townhall' then 2  when amenity in ('post_office','courthouse','police','public_building','hospital','clinic') then 1  else 0 end as prio
         FROM planet_osm_polygon p
-        WHERE (amenity is not null or shop is not null or tourism in ('alpine_hut','camp_site','caravan_site','guest_house','hostel','hotel','motel','museum','viewpoint','bed_and_breakfast','information','chalet','zoo') or highway in ('bus_stop','traffic_signals') or man_made in ('mast','water_tower')  or historic in ('memorial','archaeological_site','castle')  or leisure in ('playground','slipway','golf_course','picnic_table') or power in ('generator','sub_station','substation','plant')  or tags ? 'emergency' or tags ? 'medical' or office is not null or tags ? 'craft')
-          AND way_area > !pixel_width!*!pixel_height!*10
+        WHERE (
+          ((!scale_denominator! < 72000) and (coalesce(amenity,tourism) in ('townhall','alpine_hut')))
+          OR ((!scale_denominator! < 36000) and (amenity='zoo' or tags->'heritage'='1' or leisure='golf_course'))
+          OR ((!scale_denominator! < 18000) and coalesce(amenity,tourism) in ('hospital','clinic','light_house','lock','castle'))
+          OR ((!scale_denominator! < 9000
+            and coalesce(amenity) in ('post_office','car_sharing','parking','pharmacy','place_of_worship','biergarten'))
+          OR ((!scale_denominator! < 4500
+            and coalesce(amenity,shop,tourism,highway,man_made,waterway,historic,leisure,power) is not null))
+          ) AND way_area > !pixel_width!*!pixel_height!*10)
         UNION SELECT
-          way,amenity,shop,tourism,highway,man_made,access,religion,waterway,lock,historic,leisure,power,operator, coalesce(tags->'indoor',case when to_int(tags->'level')<0 then 'yes'::text when tags->'location'='underground' then 'yes'::text else null end) as indoor, to_int(tags->'level') as level, tags->'network' as network, tags->'ref:FR:LaPoste' as ref_laposte, coalesce(tags->'emergency', tags->'medical')  as emergency, tags->'conveying' as conveying, tags->'incline' as incline, tags->'fuel:lpg' as lpg , tags->'heritage' as heritage, coalesce(tags->'post_office:type', tags->'recycling_type', tags->'shelter_type',tags->'information','') as poi_type, substring('******',1,to_int(tags->'stars')::integer) as stars, tags->'parking' as parking, 0 as way_area, name, ref, tags->'organic' as organic, office, p.tags->'craft' as craft, fr_abbrev(coalesce(p.tags->'short_name:fr',p.tags->'short_name',p.tags->'alt_name',p.tags->'name:fr',p.name)) as nom,  case when amenity='townhall' then 2  when amenity in ('post_office','courthouse','police','public_building','hospital','clinic') then 1  else 0 end as prio FROM planet_osm_point p WHERE (amenity is not null and amenity != 'bus_station') or shop is not null or tourism in ('alpine_hut','camp_site','caravan_site','guest_house','hostel','hotel','motel','museum','viewpoint','bed_and_breakfast','information','chalet','zoo') or highway in ('traffic_signals','ford') or man_made in ('mast','water_tower') or historic in ('memorial','archaeological_site','castle') or waterway='lock' or lock='yes' or leisure in ('playground','slipway','golf_course','picnic_table') or power in ('generator','sub_station','substation','plant') or tags ? 'emergency' or tags ? 'medical' or office is not null or tags ? 'craft'
-        ORDER BY prio desc, way_area desc ) as points"
+          way,amenity,shop,tourism,highway,man_made,access,religion,waterway,lock,historic,leisure,power,operator, coalesce(tags->'indoor',case when to_int(tags->'level')<0 then 'yes'::text when tags->'location'='underground' then 'yes'::text else null end) as indoor, to_int(tags->'level') as level, tags->'network' as network, tags->'ref:FR:LaPoste' as ref_laposte, coalesce(tags->'emergency', tags->'medical')  as emergency, tags->'conveying' as conveying, tags->'incline' as incline, tags->'fuel:lpg' as lpg , tags->'heritage' as heritage, coalesce(tags->'post_office:type', tags->'recycling_type', tags->'shelter_type',tags->'information','') as poi_type, substring('******',1,to_int(tags->'stars')::integer) as stars, tags->'parking' as parking, 0 as way_area, name, ref, tags->'organic' as organic, office, p.tags->'craft' as craft, fr_abbrev(coalesce(p.tags->'short_name:fr',p.tags->'short_name',p.tags->'alt_name',p.tags->'name:fr',p.name)) as nom,  case when amenity='townhall' then 2  when amenity in ('post_office','courthouse','police','public_building','hospital','clinic') then 1  else 0 end as prio FROM planet_osm_point p
+        WHERE (
+          ((!scale_denominator! < 72000)
+            and coalesce(amenity,tourism) in ('townhall','alpine_hut'))
+          OR ((!scale_denominator! < 36000)
+            and (amenity='zoo' or tags->'heritage'='1' or leisure='golf_course'))
+          OR ((!scale_denominator! < 18000)
+            and coalesce(amenity,tourism) in ('hospital','clinic','light_house','lock','castle'))
+          OR ((!scale_denominator! < 9000
+            and coalesce(amenity) in ('post_office','car_sharing','parking','pharmacy','place_of_worship','biergarten'))
+          OR ((!scale_denominator! < 4500
+            and coalesce(amenity,shop,tourism,highway,man_made,waterway,historic,leisure,power) is not null))
+          )
+        )
+        ORDER BY prio desc, way_area desc ) as points
 
     class: points
 
